# xvim

./: .gitignore  Cargo.toml  README.md
src/: cmd_line.rs  logging_sender.rs  main.rs
src/bridge/: create.rs  events.rs  handler.rs  mod.rs  tx_wrapper.rs  ui_commands.rs
src/editor/: cursor.rs  draw_command_batcher.rs  mod.rs  style.rs  window.rs
src/render/: grid_render.rs  mod.rs
src/render/fonts/: caching_shaper.rs  font_loader.rs  font_options.rs  mod.rs
src/settings/: from_value.rs  mod.rs
src/window/: dimensions.rs  mod.rs  settings.rs
src/window/window_wrapper/: mod.rs  renderer.rs
xvim-derive/: Cargo.toml
xvim-derive/src/: lib.rs
xvim-macro/: Cargo.toml
xvim-macro/src/: lib.rs
