[package]
name = "xvim"
version = "0.0.1"
edition = "2018"
resolver = "2"

[workspace]
merbers = ["xvim-macro"]

[dependencies]
glutin = "0"
gl = "0"
xi-core-lib = { git = "https://github.com/xi-editor/xi-editor" }
xi-rpc = { git = "https://github.com/xi-editor/xi-editor" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"

[target.'cfg(linux)'.dependencies.skia-safe]
features = ["gl", "egl"]
version = "0"

[target.'cfg(not(linux))'.dependencies.skia-safe]
features = ["gl"]
version = "0"
