[package]
name = "xvim"
version = "0.0.1"
authors = ["Cazean <lkzheg@gmail.com>"]
edition = "2018"
description = "Powerful editor"
resolver = "2"

[workspace]
members = ["xvim-derive"]

[dependencies]
tokio = { version = "1", features = ["full"]}
clap = "2"
log = "0"
rmpv = "1"
parking_lot = "0"
lazy_static = "1"
glutin = "0"
gl = "0"
xvim-derive = { path = "xvim-derive" }
xi-core-lib = { git = "https://github.com/xi-editor/xi-editor" }
xi-rpc = { git = "https://github.com/xi-editor/xi-editor" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"

[target.'cfg(linux)'.dependencies.skia-safe]
features = ["gl", "egl"]
version = "0"

[target.'cfg(not(linux))'.dependencies.skia-safe]
features = ["gl"]
version = "0"
