[package]
name = "xvim"
version = "0.0.1"
authors = ["Cazean <lkzheg@gmail.com>"]
edition = "2018"
description = "Powerful editor"
resolver = "2"

[workspace]
members = ["xvim-derive"]

[dependencies]
image = { version = "0", default-features = false, features = ["ico"]}
serde = { version = "1", features = ["derive"]}
serde_json =  "1"
which = "4"
async-trait = "0"
futures = "0"
pin-project = "1"
tokio = { version = "1", features = ["full"]}
tokio-util = "0"
clap = "2"
log = "0"
flexi_logger = { version = "0", default-features = false }
parking_lot = "0"
lazy_static = "1"
glutin = "0"
gl = "0"
xvim-derive = { path = "xvim-derive" }
nvim-rs = { git = "https://github.com/KillTheMule/nvim-rs", branch = "master", features = ["use_tokio"] }
xi-core-lib = { git = "https://github.com/xi-editor/xi-editor" }
xi-rpc = { git = "https://github.com/xi-editor/xi-editor" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"

[target.'cfg(linux)'.dependencies.skia-safe]
features = ["gl", "egl"]
version = "0"

[target.'cfg(not(linux))'.dependencies.skia-safe]
features = ["gl"]
version = "0"
